--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,9 @@ nav {
 header {
   background-color: black; }
 
+body {
+  font-size: 16px; }
+
 .titulo {
   text-align: center;
   font-size: 5rem;
@@ -277,3 +280,53 @@ h1 {
 @keyframes blur {
   from {
     text-shadow: 0px 0px 10px red, 0px 0px 10px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 50px #fff, 0px 0px 50px #fff, 0px 0px 50px #7B96B8, 0px 0px 150px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px -10px 100px #7B96B8, 0px -10px 100px #7B96B8; } }
+
+@media screen and (max-width: 412px) {
+  nav {
+    position: relative;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none; }
+  nav .nav-link {
+    color: white;
+    font-size: 1.5rem; }
+  nav .navegador {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    background-color: #601aa1;
+    display: flex;
+    flex-direction: row;
+    align-items: center; }
+  .subtitulo2 {
+    font-size: 2rem;
+    margin-left: 0rem; }
+  div .card-text {
+    font-size: 0.8rem;
+    text-align: center; }
+  .titulo {
+    text-align: center;
+    font-size: 3rem;
+    margin-top: 5rem;
+    margin-bottom: 0.5rem; }
+  .infoxtra {
+    margin-right: 0rem; }
+  .formulario {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem; }
+  .botonenv {
+    margin-left: 15rem; }
+  .you {
+    width: 50px;
+    height: 100%; }
+  .infogame {
+    margin-left: 1rem; }
+  .col-8 {
+    flex: 0 0 auto;
+    width: 100%; }
+  .infogame1 {
+    margin-left: 1rem; }
+  .image {
+    width: 375px;
+    padding: 2rem; } }
