--- a/scss/_respons.scss
+++ b/scss/_respons.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 412px){   
+@media screen and (max-width: 576px){   
     
     nav {
         position: relative; 
@@ -8,11 +8,6 @@
         list-style: none;
     }
     
-        nav .nav-link{
-            color:$colortxt;
-            font-size: 1.5rem;
-        }
-
         nav .navegador{
             font-family: $fuenteppal;
             background-color: $colorfondosdiv;
@@ -34,7 +29,7 @@
             text-align: center;
             font-size: 3rem;
             margin-top: 5rem;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.8rem;
         }
         .infoxtra {
     margin-right: 0rem;
@@ -66,4 +61,63 @@
         width: 375px;
         padding: 2rem;
     }
+    .area {
+        margin-top: 2rem;
+        animation:normal;
+        
     }
+    }
+
+@media screen and (max-width: 768px){
+    nav .navegador {
+        justify-content: start;
+        align-content: space-around;
+    }
+    .titulo {
+        text-align: center;
+        font-size: 4rem;
+        margin-top: 7rem;
+    }
+    .subtitulo2 {
+        font-size: 3rem;
+        margin-left: 0rem;
+        margin-top: 0rem;
+    }
+    .row {
+        display: flex;
+    }
+    .infogame {
+        margin-left: 2rem;
+        margin-top: 6rem;
+    }
+    .infogame1 {
+        margin-left: 2rem;
+        margin-top: 6rem;
+    }
+    .col-8 {
+        width: 100%;
+    }
+    .col {
+        flex: none;
+    }
+    .formulario {
+        margin-left: 4rem;
+        margin-right: 4rem;
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+    }
+    .botonenv {
+        margin-left: 15rem;
+    } 
+    .area {
+        margin-top: 4rem;
+        animation:normal;
+    }
+    .titulo {
+        margin-bottom: 4rem;
+    }
+    .container, .container-md, .container-sm {
+    max-width: 500px;
+    }
+}
+    
